--- a/style.css
+++ b/style.css
@@ -1,104 +1,15 @@
-* {
-    box-sizing: border-box;
-
-}
-.body{
-    font-family: Roboto, sans-serif;
-    
-}
-.name{
-
-    font-size: 48px;
-    text-shadow: 0 -0.05em 0.2em #FFF, 0.01em -0.02em 0.15em #FE0, 0.01em -0.05em 0.15em #FC0, 0.02em -0.15em 0.2em #F90, 0.04em -0.20em 0.3em #F70, 0.05em -0.25em 0.4em #F70, 0.06em -0.2em 0.9em #F50, 0.1em -0.1em 1.0em #F40;
-    color: #ffe;
-   
+#texto1{
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+justify-content: center;
+font-family: 'Rubik Mono One', sans-serif;
+background-color: #30d8f2;
 }
 
-.container-display-AWP{
-    position: relative;
-    height: 400px;
+#noticiasContainer {
+    border: 1px outset #ff0379;
+  background-color: #ffc403;
+  text-align: center;
 }
-.rojazo{
-    color: white;
-    background-color: red;
-}
-.texto-medio-AWP{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,50%);
-    font-size: 30px;;
-
-}
-.container-display-otro{
-    position: relative;
-    height: 300px;
-}
-.texto-medio-otro{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,50%);
-    font-size: 25px;;
-    color: red;
-
-}
-.grid-container {
-    display: grid;
-    gap: 50px 100px;
-    grid-template-columns: auto auto auto;
-    background-color: white;
-    padding: 10px;
-}
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .container-card {
-    padding: 2px 16px;
-  }
-
-  .video-format{
-    width: 100%;
-    height: auto;
-  }
-  @media only screen and (max-width:800px) {
-    /* For tablets: */
-    .container-display-AWP, .container-card, .grid-container, .card, .video-format {
-      width: 80%;
-      padding: 0;
-    }
-    
-  }
-  @media only screen and (max-width:500px) {
-    /* For mobile phones: */
-    .container-display-AWP, .container-display-otro, .container-card, .grid-container, .card, .video-format {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  .container {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-  }
-  
-  /* Then style the iframe to fit in the container div with full height and width */
-  .responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-  }
